# investment-opportunities

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/db/: engine.py  models.py
backend/app/models/: schemas.py
backend/app/routers/: detail.py  scan.py
backend/app/services/: analytics_engine.py  cache_service.py  calendar_service.py  market_data_service.py  universe_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/components/: FilterPanel.tsx  ResultsTable.tsx  SavedScans.tsx  Sparkline.tsx  StockDetailDrawer.tsx
