[project]
name = "equity-drawdown-scanner-backend"
version = "1.0.0"
description = "FastAPI backend for the equity drawdown scanner"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "exchange-calendars>=4.5.0",
    "fastapi>=0.115.0",
    "html5lib>=1.1",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "python-dateutil>=2.9.0",
    "uvicorn[standard]>=0.32.0",
    "yfinance>=0.2.40",
]

[tool.uv]
package = false
